# Project-LoginAuth

./: .gitignore  README.md
FastAPI/: database.py  main.py  models.py  requirements.txt
FastAPI/api/v1/: router.py
FastAPI/api/v1/endpoints/: users.py
FastAPI/app/: main.py
FastAPI/app/api/v1/: router.py
FastAPI/app/api/v1/endpoints/: login.py  receiver.py  users.py
FastAPI/app/core/: load_env.py  password_security.py  security.py
FastAPI/app/models/: User.py  __init__.py
FastAPI/app/parser/: __init__.py  pdf_parser.py
FastAPI/app/schemas/: __init__.py  login.py  user_register.py
FastAPI/app/services/: __init__.py  login.py  user_service.py
FastAPI/core/: database.py  load_env.py
FastAPI/models/: User.py
FastAPI/schemas/: user_register.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: Header.tsx  Login.tsx  LoginCard.tsx  RegisterCard.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/components/UI/: FileUpload.tsx  ImageUpload.tsx  LoginCard.tsx  RegisterCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCEP.ts  useFormInput.ts
frontend/src/pages/: LoginPage.tsx  MainPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: validateCPF.ts  validatePassword.ts  validators.ts
parser/: CMakeLists.txt  conanfile.py  package.json
